@@ -3931,3 +3931,5 @@ Changelog for GXemul:
 		Removing lots of "cd .." stuff from the Makefiles; GNU make
 		did not work too well with them. Hopefully this will make
 		tracking down compile problems on GNU/Linux machines easier.
+20080317	Beginning on an AddressDataBus abstract class/interface, which
+		e.g. the RAM component will implement.
